--- a/src/pages/HomePage/components/Navbar/navbar.module.scss
+++ b/src/pages/HomePage/components/Navbar/navbar.module.scss
@@ -10,15 +10,13 @@
 .nav {
   font-family: "Montserrat-bold", sans-serif !important;
   position: relative;
-  position: fixed;
   z-index: 2;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   top: 0;
-  max-width: 100vw;
-  width: 80%;
+  width: 100%;
   @media screen and (max-width: 700px) {
     flex-direction: column;
   }
@@ -28,9 +26,7 @@
     justify-content: space-around;
     align-items: center;
     list-style-type: none;
-    width: 500px;
-    padding: 0px;
-    font-size: 11px;
+    font-size: 12px;
     cursor: pointer;
     @media screen and (max-width: 700px) {
       display: none;
@@ -95,11 +91,11 @@
 }
 
 .contact {
+  width: 170px;
+  padding-right: 100px;
   height: 30px;
-  width: 100%;
-  max-width: 170px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   @media screen and (max-width: 700px) {
     display: none;
@@ -181,14 +177,10 @@
   }
 }
 .divLogo {
-  width: 200px;
+  padding-left: 100px;
   @media screen and (max-width: 700px) {
     width: 100%;
   }
-}
-.logo {
-  width: 80px;
-  height: auto;
 }
 .logoButton {
   background-color: transparent;
