--- a/src/pages/HomePage/components/informations/informations.module.scss
+++ b/src/pages/HomePage/components/informations/informations.module.scss
@@ -12,7 +12,10 @@
   margin-top: 80px;
   display: flex;
   flex-direction: column;
-  padding: 0px 100px;
+  padding: 40px 100px;
+  @media screen and (max-width: 600px) {
+    padding: 40px 20px;
+  }
 }
 .informationContainer {
   display: flex;
@@ -39,13 +42,27 @@
   background-color: #fff;
   border-radius: 50%;
   animation: moveCircle 6s infinite linear;
+  @media screen and (max-width: 500px) {
+    width: 150px;
+    height: 150px;
+  }
 }
 @keyframes moveCircle {
   0% {
-    transform: translate(-300px, -300px); /* Start outside the container */
+    transform: translate(-300px, -300px);
   }
   100% {
-    transform: translate(100%, 200px); /* Adjust 100% and 50px as needed */
+    transform: translate(100%, 200px);
+  }
+}
+@media screen and (max-width: 500px) {
+  @keyframes moveCircle {
+    0% {
+      transform: translate(-300px, -400px);
+    }
+    100% {
+      transform: translate(100%, 500px);
+    }
   }
 }
 
@@ -55,6 +72,9 @@
   overflow: hidden;
   h3 {
     font-size: 21px;
+    @media screen and (max-width: 500px) {
+      font-size: 16px;
+    }
   }
   .description {
     h3 {
@@ -69,6 +89,9 @@
     h3:nth-of-type(1) {
       font-family: "Montserrat-bold", sans-serif !important;
       font-size: 30px;
+      @media screen and (max-width: 500px) {
+        font-size: 20px;
+      }
     }
   }
 }
