--- a/src/pages/HomePage/components/projects/projects.module.scss
+++ b/src/pages/HomePage/components/projects/projects.module.scss
@@ -19,6 +19,9 @@
       margin: 20px 0px;
       padding: 20px 90px 0px 90px;
       border-radius: 30px;
+      @media screen and (max-width: 750px) {
+        padding: 20px 20px 0px 20px;
+      }
       h3 {
         font-size: 35px;
         margin: 15px 0px;
@@ -33,6 +36,19 @@
         height: 300px;
         overflow: hidden;
         position: relative;
+        @media screen and (max-width: 950px) {
+          height: 250px;
+        }
+        @media screen and (max-width: 850px) {
+          height: 200px;
+        }
+        @media screen and (max-width: 550px) {
+          height: 150px;
+          margin-top: 15px;
+        }
+        @media screen and (max-width: 400px) {
+          height: 100px;
+        }
         img {
           position: absolute;
           top: 0;
