--- a/src/pages/HomePage/homePage.module.scss
+++ b/src/pages/HomePage/homePage.module.scss
@@ -4,4 +4,7 @@
   align-items: center;
   flex-direction: column;
   padding: 0px 100px;
+  @media screen and (max-width: 1000px) {
+    padding: 0px 20px;
+  }
 }
