--- a/src/pages/HomePage/homePage.module.scss
+++ b/src/pages/HomePage/homePage.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/abstracts/colors.scss";
+
 .container {
   margin-top: 80px;
   display: flex;
@@ -6,5 +8,22 @@
   padding: 0px 100px;
   @media screen and (max-width: 1000px) {
     padding: 0px 20px;
+  }
+}
+.buttonContainer {
+  position: fixed;
+  right: 50px;
+  bottom: 30px;
+  .icon {
+    width: 30px;
+    height: 30px;
+    color: $white;
+  }
+  .floatenButton {
+    width: 50px;
+    height: 50px;
+    background-color: $secoundary;
+    border-radius: 50%;
+    border: none;
   }
 }
