--- a/src/pages/HomePage/components/contact/contactMe.module.scss
+++ b/src/pages/HomePage/components/contact/contactMe.module.scss
@@ -104,6 +104,7 @@
     width: 350px;
     border-radius: 50px;
     padding-left: 30px;
+    color: $white;
     background-color: #918bf5;
     font-size: 16px;
     @media screen and (max-width: 700px) {
